--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <html lang="en">
   <head>
     <title>Portfolio of Alec Davis</title>
+    <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
 <hr>
+    <div>
       <h1>About:</h1>
       <p> Name is Alec Davis and I am a student studying computer science with an
         emphassis in software engineering at BYU in Provo.</p>
+    </div>
 
+    <div>
       <h2>Projects:</h2>
       <p>Some things I have worked on.</p>
       <ol>
@@ -20,9 +24,10 @@
         <li>I fixed my roommate's laptop after the bluetooth died by resoldering <br/>
           the antena connector to the wireless chip.</li>
         <li>Reshelled and added an LCD screen to a Game Boy Advance</li>
-
+      </ol>
+    </div>
 <hr>
-
+    <div>
       <h3>Experience:<h3>
       <p>Some of my experiences</p>
       <ul>
@@ -34,7 +39,7 @@
         <li>Eagle Scout</li>
         <li>Learned to touch type using Colemak DH</li>
       </ul>
-
+    </div>
 <hr>
 
       <h4>Contact:</h4>
