Finalized my design and completed todo.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
-<hr>
-    <div>
-      <h1>About:</h1>
+
+    <div class = 'page'>
+      <h1>About</h1>
       <p> Name is Alec Davis and I am a student studying computer science with an
         emphassis in software engineering at BYU in Provo.</p>
     </div>
 
-    <div>
-      <h2>Projects:</h2>
+    <div class = 'page'>
+      <h2>Projects</h2>
       <p>Some things I have worked on.</p>
       <ol>
         <li>I have built own computer</li>
@@ -26,9 +26,9 @@
         <li>Reshelled and added an LCD screen to a Game Boy Advance</li>
       </ol>
     </div>
-<hr>
-    <div>
-      <h3>Experience:<h3>
+
+    <div class = 'page'>
+      <h3>Experience</h3>
       <p>Some of my experiences</p>
       <ul>
         <li>Worked at Dominos Pizza for over a year and through the early stages
@@ -43,13 +43,16 @@
 <hr>
 
       <h4>Contact:</h4>
-      <p>Here are the means at which to contact me</p>
+      <div class="contact">
+        <p1>Here are the means at which to contact me</p1>  <! This is seemingly the only way I could get it to not be centered>
+      </div>
       <ul>
-        <li><a href="mailto:alecdavis@posteo.net">My Email alecdavis@posteo.net</a><br/>
+        <li>My Email <a href="mailto:alecdavis@posteo.net">alecdavis@posteo.net</a><br/>
           &emsp; Download my <a href="https://bin.disroot.org/?f8372163c1233a67#5nCW3eBczNSxTnFAN92RDyzKJC4m9JCdjmvCtcQs9bBw">
             GPG key</a> for more secure communications.</li>
         <li>My <a href="https://github.com/Ki11erRabbit">GitHub</a> page</li>
 
-
+      <div class = 'gap'> <! Puts some space at the bottom of the page to allow for scrolling >
+      </div>
   </body>
 </html>
