Replaced p1 with a more sensible id tag

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 <hr>
 
       <h4>Contact:</h4>
-      <div class="contact">
-        <p1>Here are the means at which to contact me</p1>  <! This is seemingly the only way I could get it to not be centered>
-      </div>
+        <p id="contact">Here are the means at which to contact me</p>
       <ul>
         <li>My Email <a href="mailto:alecdavis@posteo.net">alecdavis@posteo.net</a><br/>
           &emsp; Download my <a href="https://bin.disroot.org/?f8372163c1233a67#5nCW3eBczNSxTnFAN92RDyzKJC4m9JCdjmvCtcQs9bBw">
