fixed contact in styles.css to actually effect the contact id tag.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <hr>
 
       <h4>Contact:</h4>
-        <p id="contact">Here are the means at which to contact me</p>
+        <p id="contact">Here are the means at which to contact me</p1>
       <ul>
         <li>My Email <a href="mailto:alecdavis@posteo.net">alecdavis@posteo.net</a><br/>
           &emsp; Download my <a href="https://bin.disroot.org/?f8372163c1233a67#5nCW3eBczNSxTnFAN92RDyzKJC4m9JCdjmvCtcQs9bBw">
