Added navbar and wrote the CSS for it. Todo: refactor all of the CSS for items to make it more legible and maintainable.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
 
+    <! Navigation Bar>
+
+    <ul class="navbarMenu">
+      <li class="navbarItem"><a id="navbarLink" href="/">Home</a></li>
+      <li class="navbarItem"><a id="navbarLink" href="/lab1.ki11errabbit.xyz/">Lab 1</a></li>
+    </ul>
+
+    <! Rest of Webpage >
+
     <div class = 'page'>
       <h1>About</h1>
       <p> Name is Alec Davis and I am a student studying computer science with an
@@ -42,7 +51,7 @@
       </ul>
     </div>
 <hr>
-
+    <div class="contact">
       <h4>Contact:</h4>
         <p id="contact">Here are the means at which to contact me</p1>
       <ul>
@@ -50,8 +59,11 @@
           &emsp; Download my <a href="https://bin.disroot.org/?f8372163c1233a67#5nCW3eBczNSxTnFAN92RDyzKJC4m9JCdjmvCtcQs9bBw">
             GPG key</a> for more secure communications.</li>
         <li>My <a href="https://github.com/Ki11erRabbit">GitHub</a> page</li>
+    </div>
 
       <div class = 'gap'> <! Puts some space at the bottom of the page to allow for scrolling >
       </div>
+
+
   </body>
 </html>
