Fixed link to Lab1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <ul class="navbarMenu">
       <li class="navbarItem"><a id="navbarLink" href="/">Home</a></li>
-      <li class="navbarItem"><a id="navbarLink" href="/lab1.ki11errabbit.xyz/">Lab 1</a></li>
+      <li class="navbarItem"><a id="navbarLink" href="http://lab1.ki11errabbit.xyz/">Lab 1</a></li>
     </ul>
 
     <! Rest of Webpage >
