moved css for navbar up to top and organized it slightly

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
 
-    <! Navigation Bar>
+    <!-- Navigation Bar-->
 
     <ul class="navbarMenu">
       <li class="navbarItem"><a id="navbarLink" href="/">Home</a></li>
       <li class="navbarItem"><a id="navbarLink" href="/lab1.ki11errabbit.xyz/">Lab 1</a></li>
     </ul>
 
-    <! Rest of Webpage >
+    <!-- Rest of Webpage -->
 
     <div class = 'page'>
       <h1>About</h1>
@@ -61,7 +61,7 @@
         <li>My <a href="https://github.com/Ki11erRabbit">GitHub</a> page</li>
     </div>
 
-      <div class = 'gap'> <! Puts some space at the bottom of the page to allow for scrolling >
+      <div class = 'gap'> <!-- Puts some space at the bottom of the page to allow for scrolling -->
       </div>
 
 
